# ESCHR

./: .cruft.json  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  .readthedocs.yaml  LICENSE  README.md  README.md.rej  pyproject.toml  pyproject.toml.rej  requirements.txt
.github/ISSUE_TEMPLATE/: feature_request.yml  feature_request.yml.rej
.github/workflows/: release.yaml  test.yaml
docs/: api.md  conf.py  contributing.md  index.md  template_usage.md
docs/notebooks/: example.ipynb  paul15.ipynb
src/ESCHR/: __init__.py  _knn_utils.py  _leiden.py  _prune_features.py  _read_write_utils.py  consensus_cluster.py
src/ESCHR/pl/: _smm_heatmap.py  _umap.py  _umap_utils.py
src/ESCHR/tl/: __init__.py  consensus_cluster.py
src/SHaRC/: __init__.py  _prune_features.py
src/SHaRC/pl/: __init__.py  _smm_heatmap.py  _umap.py  _umap_utils.py  palettes.py
src/SHaRC/tl/: _knn_utils.py  _leiden.py  basic.py  consensus_cluster.py
tests/: test_basic.py
