[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[project]
name = "ESCHR"
version = "0.0.1"
description = "A hyperparameter-randomized ensemble approach for robust clustering across diverse datasets"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Sarah Goggin"},
]
maintainers = [
    {name = "Sarah Goggin", email = "sg4dm@virginia.edu"},
]
urls.Documentation = "https://ESCHR.readthedocs.io/"
urls.Source = "https://github.com/smgoggin10/ESCHR"
urls.Home-page = "https://github.com/smgoggin10/ESCHR"
dependencies = [
    "anndata==0.7.8",
    "igraph==0.10.4",
    "leidenalg",
    "nmslib==2.1.1",
    "numpy",
    "pandas==1.5.3",
    "zarr",
    "scanpy",
    "scipy",
    "umap-learn==0.5.2",
    "matplotlib",
    # for debug logging (referenced from the issue template)
    "session-info"
]

[project.optional-dependencies]
dev = [
    # CLI for bumping the version number
    "bump2version",
    "pre-commit",
    "twine>=4.0.2"
]
doc = [
    "sphinx>=4",
    "sphinx-book-theme>=0.3.3",
    "myst-nb",
    "sphinxcontrib-bibtex>=1.0.0",
    "sphinx-autodoc-typehints",
    # For notebooks
    "ipykernel",
    "ipython",
    "sphinx-copybutton",
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ['src/ESCHR']

[tool.coverage.run]
source = ["ESCHR"]
omit = [
    "**/test_*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = [
    "--import-mode=importlib",  # allow using test files with same name
]

[tool.isort]
include_trailing_comma = true
multi_line_output = 3
profile = "black"
skip_glob = ["docs/*"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.jupytext]
formats = "ipynb,md"

[tool.cruft]
skip = [
    "tests",
    "src/**/__init__.py",
    "src/**/basic.py",
    "docs/api.md",
    "docs/changelog.md",
    "docs/references.bib",
    "docs/references.md",
    "docs/notebooks/example.ipynb"
]

[tool.ruff]
ignore = [
    # I am ok with blind exception calls for now, will fix later
    "B902",
    # I use multiple # for identifying diff types of comments to myself
    "E266"
]
